fix: Fixing IT failures and adding them back
We shouldn't remove tests, but make them valid. This was my mistake with
The previous commit. This commit fixes that. Additionally this will add
Address fields to Entities. I also started updating Swagger but will do
This in the swaggerhub instead and then export the JSON.
