# src/routes/contact.js
@@ -1,5 +1,5 @@
 import { Router } from 'express';
-// import validator from 'validator';
+import validator from 'validator';
 import utils from '../utils';
 
 const router = new Router();
@@ -9,7 +9,7 @@ router.get('/', async (req, res) => {
 	let code;
 	let message;
 	try {
-		if (await utils.validateToken(req, res)) {
+		if (await utils.validateToken(req)) {
 			const contacts = await req.context.models.Contact.findAll({
 			});
 
@@ -36,15 +36,19 @@ router.get('/:contact_id', async (req, res) => {
 	let code;
 	let message;
 	try {
-		if (await utils.validateToken(req, res)) {
-			const contact = await req.context.models.Contact.findOne({
-				where: {
-					id: req.params.contact_id
-				},
-			});
+		if (await utils.validateToken(req)) {
+			if (validator.isUUID(req.params.contact_id)) {
+				const contact = await req.context.models.Contact.findOne({
+					where: {
+						id: req.params.contact_id
+					},
+				});
 
-			code = 200;
-			message = contact;
+				code = 200;
+				message = contact;
+			} else {
+				code = 400;
+			}
 		} else {
 			code = 401;
 		}
@@ -61,13 +65,16 @@ router.post('/', async (req, res) => {
 	let code;
 	let message;
 	try {
-		if (await utils.validateToken(req, res)) {
+		if (await utils.validateToken(req)) {
 			if (req.body.name !== undefined) {
+				console.log('test')
 				const { name, phone, email, UserId, EntityId } = req.body;
 				const contact = await req.context.models.Contact.create({ name, email, phone, UserId, EntityId });
 
 				code = 200;
 				message = contact.id + ' created';
+			} else {
+				code = 400;
 			}
 		} else {
 			code = 401;
@@ -85,30 +92,34 @@ router.put('/', async (req, res) => {
 	let code;
 	let message;
 	try {
-		if (await utils.validateToken(req, res)) {
-			const { id, name, phone, email, UserId, EntityId } = req.body;
+		if (await utils.validateToken(req)) {
+			if (validator.isUUID(req.body.id)) {
+				const { id, name, phone, email, UserId, EntityId } = req.body;
 
-			/** @todo validate emails */
-			// Validating emails 
-			// if (await !utils.validateEmails(email)) res.status(500).send('Server error');
+				/** @todo validate emails */
+				// Validating emails 
+				// if (await !utils.validateEmails(email)) res.status(500).send('Server error');
 
-			const contact = await req.context.models.Contact.findOne({
-				where: {
-					id: id
-				}
-			});
+				const contact = await req.context.models.Contact.findOne({
+					where: {
+						id: id
+					}
+				});
 
-			contact.name = (name) ? name : contact.name;
-			contact.phone = (phone) ? phone : contact.phone;
-			contact.email = (email) ? email : contact.email;
-			contact.UserId = (UserId) ? UserId : contact.UserId;
-			contact.EntityId = (EntityId) ? EntityId : contact.EntityId;
-			contact.updatedAt = new Date();
+				contact.name = (name) ? name : contact.name;
+				contact.phone = (phone) ? phone : contact.phone;
+				contact.email = (email) ? email : contact.email;
+				contact.UserId = (UserId) ? UserId : contact.UserId;
+				contact.EntityId = (EntityId) ? EntityId : contact.EntityId;
+				contact.updatedAt = new Date();
 
-			await contact.save();
+				await contact.save();
 
-			code = 200;
-			message = contact.id + ' updated';
+				code = 200;
+				message = contact.id + ' updated';
+			} else {
+				code = 400;
+			}
 		} else {
 			code = 401;
 		}
@@ -126,15 +137,19 @@ router.delete('/:contact_id', async (req, res) => {
 	let message;
 	try {
 		if (await utils.validateToken(req, res)) {
-			const contact = await req.context.models.Contact.findOne({
-				where: {
-					id: req.params.contact_id
-				}
-			});
-			await contact.destroy();
+			if (validator.isUUID(req.params.contact_id)) {
+				const contact = await req.context.models.Contact.findOne({
+					where: {
+						id: req.params.contact_id
+					}
+				});
+				await contact.destroy();
 
-			code = 200;
-			message = req.params.contact_id + ' deleted';
+				code = 200;
+				message = req.params.contact_id + ' deleted';
+			} else {
+				code = 400;
+			}
 		} else {
 			code = 401;
 		}
