# src/routes/entity.js
@@ -1,5 +1,5 @@
 import { Router } from 'express';
-// import validator from 'validator';
+import validator from 'validator';
 import utils from '../utils';
 
 const router = new Router();
@@ -52,26 +52,30 @@ router.get('/:entity_id', async (req, res) => {
 	let message;
 	try {
 		if (await utils.validateToken(req, res)) {
-			const entity = await req.context.models.Entity.findOne({
-				where: {
-					id: req.params.entity_id
-				}
-			});
-			entity.dataValues.contacts = [];
+			if (validator.isUUID(req.params.entity_id)) {
+				const entity = await req.context.models.Entity.findOne({
+					where: {
+						id: req.params.entity_id
+					}
+				});
+				entity.dataValues.contacts = [];
 
-			const contacts = await req.context.models.Entity.findContacts(req.params.entity_id);
+				const contacts = await req.context.models.Entity.findContacts(req.params.entity_id);
 
-			if (contacts) {
-				for (let contact of contacts) {
-					entity.dataValues.contacts.push({
-						id: contact.dataValues.id,
-						name: contact.dataValues.name,
-					});
+				if (contacts) {
+					for (let contact of contacts) {
+						entity.dataValues.contacts.push({
+							id: contact.dataValues.id,
+							name: contact.dataValues.name,
+						});
+					}
 				}
+
+				code = 200;
+				message = entity;
+			} else {
+				code = 400;
 			}
-
-			code = 200;
-			message = entity;
 		} else {
 			code = 401;
 		}
@@ -90,7 +94,7 @@ router.post('/', async (req, res) => {
 	try {
 		if (await utils.validateToken(req, res)) {
 			if (req.body.name !== undefined) {
-				let { name, phone, email, checkIn } = req.body;
+				let { name, address, phone, email, checkIn } = req.body;
 
 				if (!checkIn) {
 					checkIn = {
@@ -101,10 +105,12 @@ router.post('/', async (req, res) => {
 					}
 				}
 
-				const entity = await req.context.models.Entity.create({ name, email, phone, checkIn });
+				const entity = await req.context.models.Entity.create({ name, address, email, phone, checkIn });
 
 				code = 200;
 				message = entity.id + ' created';
+			} else {
+				code = 400;
 			}
 		} else {
 			code = 401;
@@ -123,54 +129,59 @@ router.put('/', async (req, res) => {
 	let message;
 	try {
 		if (await utils.validateToken(req, res)) {
-			let { id, name, phone, email, checkIn } = req.body;
+			if (validator.isUUID(req.body.id)) {
+				let { id, name, address, phone, email, checkIn } = req.body;
 
-			/** @todo validate emails */
-			// Validating emails 
-			// if (await !utils.validateEmails(email)) res.status(500).send('Server error');
+				/** @todo validate emails */
+				// Validating emails 
+				// if (await !utils.validateEmails(email)) res.status(500).send('Server error');
 
-			let entity = await req.context.models.Entity.findOne({
-				where: {
-					id: id
+				let entity = await req.context.models.Entity.findOne({
+					where: {
+						id: id
+					}
+				});
+
+				entity.name = (name) ? name : entity.name;
+				entity.address = (address) ? address : entity.address;
+				entity.phone = (phone) ? phone : entity.phone;
+				entity.email = (email) ? email : entity.email;
+				/** @todo validate checkIn JSON */
+				if (entity.checkIn === null && checkIn) {
+					const checkIns = {
+						_meta: {
+							total: 1
+						},
+						checkIns: [
+							checkIn
+						]
+					}
+
+					entity.checkIn = checkIns;
+				} else if (entity.checkIn !== null && checkIn) {
+					let checkIns = entity.checkIn.checkIns;
+					checkIns.push(checkIn);
+					let total = entity.checkIn._meta.total + 1
+
+					const update = {
+						_meta: {
+							total: total
+						},
+						checkIns: checkIns
+					}
+
+					entity.checkIn = update;
 				}
-			});
 
-			entity.name = (name) ? name : entity.name;
-			entity.phone = (phone) ? phone : entity.phone;
-			entity.email = (email) ? email : entity.email;
-			/** @todo validate checkIn JSON */
-			if (entity.checkIn === null && checkIn) {
-				const checkIns = {
-					_meta: {
-						total: 1
-					},
-					checkIns: [
-						checkIn
-					]
-				}
+				entity.updatedAt = new Date();
 
-				entity.checkIn = checkIns;
-			} else if (entity.checkIn !== null && checkIn) {
-				let checkIns = entity.checkIn.checkIns;
-				checkIns.push(checkIn);
-				let total = entity.checkIn._meta.total + 1
+				await entity.save();
 
-				const update = {
-					_meta: {
-						total: total
-					},
-					checkIns: checkIns
-				}
-
-				entity.checkIn = update;
+				code = 200;
+				message = entity.id + ' updated';
+			} else {
+				code = 400;
 			}
-
-			entity.updatedAt = new Date();
-
-			await entity.save();
-
-			code = 200;
-			message = entity.id + ' updated';
 		} else {
 			code = 401;
 		}
@@ -188,15 +199,19 @@ router.delete('/:entity_id', async (req, res) => {
 	let message;
 	try {
 		if (await utils.validateToken(req, res)) {
-			const entity = await req.context.models.Entity.findOne({
-				where: {
-					id: req.params.entity_id
-				}
-			});
-			await entity.destroy();
+			if (validator.isUUID(req.params.entity_id)) {
+				const entity = await req.context.models.Entity.findOne({
+					where: {
+						id: req.params.entity_id
+					}
+				});
+				await entity.destroy();
 
-			code = 200;
-			message = req.params.entity_id + ' deleted';
+				code = 200;
+				message = req.params.entity_id + ' deleted';
+			} else {
+				code = 400;
+			}
 		} else {
 			code = 401;
 		}
